# Aipod

./: LICENSE  README.md  opt_doe_pydantic.yml  pyproject.toml  requirements.txt  setup.py  template_readme.md
configs/: opt_datamodel_pydantic.yml  opt_models_pydantic.yml  opt_visualization_pydantic.yml
docs/data/: doe_df.csv  doe_df_experiments.xlsx
docs/data_processed/: processed_data.xlsx  regressor_predictions.xlsx
docs/tutorial/: run_doe_handler.py  run_model_handler.py  run_visualization_handler.py
docs/tutorial/notebook/: prova_config_class.ipynb  prova_config_doe.ipynb  prova_config_reg.ipynb  prova_config_vis.ipynb
src/aidox/: __init__.py  _utils.py  commons.py  constants.py  exceptions.py  opt_utils.py  plot_utils.py
src/aidox/models/: pydantic_models_data.py  pydantic_models_training.py  pydantic_models_visualization.py
src/aidox/optimization/: handler_data.py  handler_model.py  handler_visualization.py
src/aidox/pyDOE2/: __init__.py  doe_box_behnken.py  doe_composite.py  var_regression_matrix.py
tests/: test_doe.py
tests/assets/: nok_test_doe.csv  nok_test_doe_over_lhs.csv  nok_test_doe_under_bbdesign.csv  nok_test_doe_under_fracfact.csv  nok_test_doe_under_fullfact.csv  nok_test_doe_under_gsd.csv  nok_test_doe_under_lhs.csv  nok_test_doe_under_pbdesign.csv  ok_test_doe.csv  ok_test_doe_under_bbdesign.csv  ok_test_doe_under_fracfact.csv  ok_test_doe_under_fullfact.csv  ok_test_doe_under_gsd.csv  ok_test_doe_under_lhs.csv  ok_test_doe_under_pbdesign.csv
