[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "aidox"
version = "0.2"
authors = [
    { name = "Mariachiara Grande", email = "grandemariachiara2@gmail.com" },
    { name = "Tommaso Gallingani", email = "t.gallingani@gmail.com" },
]
description = "A package for Design of Experiments and Process Optimization in Material Processing"
readme = "README.rst"
requires-python = ">=3.9"

dynamic = ["dependencies"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}


[project.scripts]
# my_script = 'package_template.script_file:function'